# cpp

./: .bazelignore  .bazelrc  .build-targets.yml  .clang-format  .clang-tidy  .editorconfig  .env.example  .gitignore  .jscpd.json  .mise.toml  .pre-commit-config.yaml  .prettierignore  1  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  Doxyfile  MODULE.bazel  README.md  Taskfile.yml  WORKSPACE  conanfile.txt  eslint.config.mjs  mise.toml  mkdocs.yml  package-lock.json  pyproject.toml  vcpkg.json  xmake.lua
.github/actions/setup-tools/: action.yml
.github/workflows/: auto.retry.yml  ci.build.yml  ci.quality.yml  ci.release.yml  ci.validate.yml  ci.version.yml  ci.yml  test.flaky.yml
.husky/: pre-commit  pre-push
.scripts/: build-dist.ps1  build-dist.sh  compile_templates.py  format_clang.py  lint-clang.py  lint-powershell.ps1  lint-shellcheck.ps1  lint-shellcheck.sh  lint_clang.py  which.py
.scripts/pylib/: __init__.py  cpp_files.py  file_finder.py  linter.py  output.py
.task/checksum/: build-xmake
_install/: README.md  __init__.py
_uvx_install/: __init__.py  bootstrap.py
docs/: index.md
docs/api/: classes.md  functions.md  index.md
include/: greeter.hpp
scripts/: compile_templates.py  format.py  lint.py  which.py
src/: CMakeLists.txt  greeter.cpp  main.cpp
templates/: .bazelrc.j2  BUILD.bazel.j2  CMakeLists.txt.j2  MODULE.bazel.j2  WORKSPACE.j2  src_CMakeLists.txt.j2  tests_BUILD.bazel.j2  xmake.lua.j2
templates/toolchain/: BUILD.j2  cc_toolchain_config.bzl.j2
tests/: BUILD  BUILD.bazel  CMakeLists.txt  test_greeter.cpp  test_simple.cpp
tests/integration/: test_simple.cpp
tests/unit/: test_greeter.cpp
uvx_install/: bootstrap.py
