[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for C++ template project"
authors = [{ name = "Templ Project", email = "contact@templ-project.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["cpp", "c++", "template", "bootstrap", "cmake", "xmake"]

[project.urls]
Homepage = "https://github.com/templ-project/cpp"
Repository = "https://github.com/templ-project/cpp.git"
Issues = "https://github.com/templ-project/cpp/issues"

[project.scripts]
bootstrap = "uvx_install.bootstrap:main"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0", "mkdoxy>=1.1.0"]

[dependency-groups]
dev = [
  "gcovr>=7.0",
  "ninja>=1.11.0",
  "jinja2>=3.1.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdoxy>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uvx_install*"]

[tool.setuptools.package-data]
"uvx_install" = ["bootstrap.py"]
