[project]
name = "cpp-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for C++ template project"
authors = [{ name = "Templ Project", email = "contact@templ-project.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["cpp", "c++", "template", "bootstrap", "cmake", "xmake"]

[project.urls]
Homepage = "https://github.com/templ-project/cpp"
Issues = "https://github.com/templ-project/cpp/issues"
Repository = "https://github.com/templ-project/cpp.git"

[project.scripts]
bootstrap = "uvx_install.bootstrap:main"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0", "mkdoxy>=1.1.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["uvx_install"]

[dependency-groups]
dev = [
  "black>=24.0.0",
  "gcovr>=7.0",
  "jinja2>=3.1.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdoxy>=1.1.0",
  "mypy>=1.10.0",
  "ninja>=1.11.0",
  "pylint>=3.0.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

# =============================================================================
# Black Configuration
# =============================================================================

[tool.black]
extend-exclude = '''
/(
  .jscpd
  | .venv
  | .xmake
  | build
  | coverage
  | dist
  | docs-html
  | node_modules
  | uvx_install
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py311"]

# =============================================================================
# Mypy Configuration
# =============================================================================

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [".jscpd", ".venv", ".xmake", "build", "coverage", "dist", "docs-html", "node_modules", "uvx_install"]
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

# =============================================================================
# Pylint Configuration (PEP 8 compliant)
# =============================================================================

[tool.pylint.basic]
argument-rgx = "[a-z_][a-z0-9_]{0,50}$"
attr-rgx = "[a-z_][a-z0-9_]{0,50}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
function-rgx = "[a-z_][a-z0-9_]{2,50}$"
good-names = ["_", "f", "fd", "i", "id", "ip", "j", "k", "ok", "x", "y", "z"]
method-rgx = "[a-z_][a-z0-9_]{2,50}$"
module-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]{0,50}$"

[tool.pylint.design]
max-args = 7
max-branches = 12
max-locals = 15
max-positional-arguments = 7
max-returns = 6
max-statements = 50

[tool.pylint.format]
indent-string = "    "
max-line-length = 88

[tool.pylint.main]
ignore = [".jscpd", ".venv", ".xmake", "build", "coverage", "dist", "docs-html", "node_modules", "uvx_install"]
ignore-patterns = ["^\\."]
jobs = 0
py-version = "3.11"
source-roots = [".scripts", "src"]

[tool.pylint.messages_control]
disable = ["fixme", "import-error", "line-too-long", "too-few-public-methods"]
enable = ["useless-suppression"]

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 6

[tool.pylint.typecheck]
generated-members = []

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
addopts = "-v --tb=short"
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = [".scripts", "tests"]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
exclude = [".jscpd", ".venv", ".xmake", "build", "coverage", "dist", "docs-html", "node_modules", "uvx_install"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["uvx_install"]
